add header & navbar

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         
         <!-- LINKS AND SCRIPTS -->
 
-        <link href="https://fonts.googleapis.com/css?family=Poppins:400,800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="scss/bootstrap.css">
+        <link rel="stylesheet" href="scss/style.css">
         <link rel="image_src" href="img/link_img.jpg">
 
         <!-- FAVICON -->
@@ -36,49 +38,94 @@
 
         <!-- NAVBAR -->
 
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg position-absolute w-100 pt-3">
             <div class="container">
-                <a href="index.html" class="navbar-brand">Brand</a>
-                <button type="button" class="navbar-toggler button-style-none ms-auto" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    <i class="fas fa-bars"></i>
+                <a href="index.html" class="navbar-brand">
+                    <img src="img/logo/logo.svg" alt="">
+                </a>
+                <button type="button" class="navbar-toggler button-style-none ms-auto" data-bs-toggle="modal" data-bs-target="#navModal">
+                    <img src="img/illustrations/bars.svg" alt="">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">Money Transfers</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About us</a>
+                            <a href="#" class="nav-link">For Business</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">New</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Contacts</a>
                         </li>
                     </ul>
+                    <a href="tel:+44 (0)20 7022 0995">
+                        <img src="img/illustrations/phone-alt.svg" alt="" width="26" class="ms-4">
+                    </a>
+                    <div class="dropdown ms-4">
+                        <button class="button-style-none dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="img/illustrations/GB.png" alt="" width="24">
+                        </button>
+                        <ul class="dropdown-menu animate slideIn">
+                            <li><a class="dropdown-item" href="#">LT</a></li>
+                            <li><a class="dropdown-item" href="#">EN</a></li>
+                            <li><a class="dropdown-item" href="#">LT</a></li>
+                        </ul>
+                    </div>
+                    <div class="btn btn-outline-white ms-4">Log in</div>
+                    <div class="btn btn-white ms-3">Register</div>
                 </div>
             </div>
         </nav>
 
-        <div class="modal fade p-0" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade p-0" id="navModal" tabindex="-1" aria-labelledby="navModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen me-0">
                 <div class="modal-content">
                     <div class="modal-header border-0 p-0">
-                        <div class="container d-flex mt-5 mb-2 pe-4">
+                        <div class="container d-flex mt-3 mb-2 pe-4">
+                            <a href="index.html" class="navbar-brand">
+                                <img src="img/logo/logo.svg" alt="">
+                            </a>
                             <button type="button" class="ms-auto button-style-none" data-bs-dismiss="modal" aria-label="Close">
-                                <i class="fas fa-times"></i>
+                                <img src="img/illustrations/times.svg" alt="">
                             </button>
                         </div>
                     </div>
                     <div class="modal-body">
                         <div class="container mt-lg-5">
                             <div class="d-flex flex-column">
-                                <div class="mb-3">
-                                    <a href="#">Home</a>
-                                </div>
-                                <div class="mb-3">
-                                    <a href="#">Home</a>
-                                </div>
-                                <div class="mb-3">
-                                    <a href="#">Home</a>
+                                <ul class="navbar-nav me-auto">
+                                    <li class="nav-item">
+                                        <a href="index.html" class="nav-link">Money Transfers</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">For Business</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">New</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">Contacts</a>
+                                    </li>
+                                </ul>
+                                <div class="btn btn-outline-white mt-3 mt-lg-0 ms-lg-4">Log in</div>
+                                <div class="btn btn-white mt-3 mt-lg-0 ms-lg-3">Register</div>
+                                <div class="d-flex mt-3 mt-lg-0">
+                                    <a href="tel:+44 (0)20 7022 0995">
+                                        <img src="img/illustrations/phone-alt.svg" alt="" width="26" class="ms-lg-4">
+                                    </a>
+                                    <div class="dropdown ms-4">
+                                        <button class="button-style-none dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <img src="img/illustrations/GB.png" alt="" width="24">
+                                        </button>
+                                        <ul class="dropdown-menu animate slideIn">
+                                            <li><a class="dropdown-item" href="#">LT</a></li>
+                                            <li><a class="dropdown-item" href="#">EN</a></li>
+                                            <li><a class="dropdown-item" href="#">LT</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -89,10 +136,103 @@
 
         <!-- HEADER -->
 
-        <header>
-            <div class="h-100 d-flex flex-column align-items-center justify-content-center px-2">
-                <h1 class="text-center" data-aos="fade-in" data-aos-easing="ease-in-out" data-aos-delay="200">Some text</h1>
-                <h4 class="text-center mt-3" data-aos="fade-in" data-aos-easing="ease-in-out" data-aos-delay="300">Some text</h4>
+        <header class="text-white">
+            <div class="bg-header-img h-100 w-100 d-flex flex-column justify-content-center">
+                <div class="pt-nav">
+                    <div class="container py-5">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h1 class="font-m">Send money to Europe to your loved ones</h1>
+                                <p class="mt-4">It feels good when you know money will be today in your receiver’s account. With our same day delivery service, your funds will travel fast and safe anywhere in Europe.</p>
+                            </div>
+                            <div class="col-lg-5 offset-lg-1 ps-lg-5">
+                                <div class="d-flex flex-column bg-white rounded-10 mb-4">
+                                    <div class="d-flex align-items-center justify-content-between border-bottom p-3">
+                                        <div class="d-flex flex-column">
+                                            <span class="text-grey text-xs">You send</span>
+                                            <span class="text-grey text-md">1,000</span>
+                                        </div>
+                                        <div class="dropdown ms-4">
+                                            <button class="button-style-none dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <img src="img/illustrations/GB.png" alt="" width="26" class="me-2">
+                                                <span class="fw-light">GB • GBP</span>
+                                            </button>
+                                            <ul class="dropdown-menu animate slideIn">
+                                                <li><a class="dropdown-item" href="#">LT</a></li>
+                                                <li><a class="dropdown-item" href="#">EN</a></li>
+                                                <li><a class="dropdown-item" href="#">LT</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="position-relative">
+                                        <button class="position-absolute left-50 translate-50 btn-repeat bg-white rounded-circle border d-flex align-items-center justify-content-center">
+                                            <img src="img/illustrations/repeat.svg" alt="" width="15">
+                                        </button>
+                                    </div>
+                                    <div class="d-flex align-items-center justify-content-between p-3">
+                                        <div class="d-flex flex-column">
+                                            <span class="text-grey text-xs">You send</span>
+                                            <span class="text-grey text-md">1,000</span>
+                                        </div>
+                                        <div class="dropdown ms-4">
+                                            <button class="button-style-none dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <img src="img/illustrations/GB.png" alt="" width="26" class="me-2">
+                                                <span class="fw-light">GB • GBP</span>
+                                            </button>
+                                            <ul class="dropdown-menu animate slideIn">
+                                                <li><a class="dropdown-item" href="#">LT</a></li>
+                                                <li><a class="dropdown-item" href="#">EN</a></li>
+                                                <li><a class="dropdown-item" href="#">LT</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="d-flex mt-3">
+                                    <img src="img/illustrations/percentage.svg" alt="" width="16" class="mx-3">
+                                    <p class="mb-0">Exchange rate: <strong>£1.00 = €1.135</strong></p>
+                                </div>
+                                <div class="d-flex mt-3">
+                                    <img src="img/illustrations/fire.svg" alt="" width="16" class="mx-3">
+                                    <p class="mb-0">Exchange rate: <strong>£1.00 = €1.135</strong></p>
+                                </div>
+                                <div class="d-flex mt-3">
+                                    <img src="img/illustrations/stopwatch.svg" alt="" width="16" class="mx-3">
+                                    <p class="mb-0">Exchange rate: <strong>£1.00 = €1.135</strong></p>
+                                </div>
+                                <div class="btn btn-blue d-block mt-4">Send money now</div>
+                            </div>
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col-lg-4 mb-3 mb-lg-0">
+                                <div class="d-flex align-items-center justify-content-lg-center">
+                                    <img src="img/illustrations/headphones-alt.svg" alt="" width="30" class="me-4">
+                                    <div>
+                                        <h6 class="mb-0">Real customer support</h6>
+                                        <p class="mb-0">No robots, only humans</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 mb-3 mb-lg-0">
+                                <div class="d-flex align-items-center justify-content-lg-center">
+                                    <img src="img/illustrations/trustpilot-1.svg" alt="" width="34" class="me-4">
+                                    <div>
+                                        <h6 class="mb-0">Excellent rating</h6>
+                                        <p class="mb-0">4.7 out of 5 based on 503 reviews</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 mb-3 mb-lg-0">
+                                <div class="d-flex align-items-center justify-content-lg-center">
+                                    <img src="img/illustrations/Combined Shape.svg" alt="" width="30" class="me-4">
+                                    <div>
+                                        <h6 class="mb-0">Secure transactions</h6>
+                                        <p class="mb-0">FCA authorised</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
 
